# slopbench

./: .gitignore  AGENTS.md  pyproject.toml  view.sh  view_agents.sh  view_plans.sh
docker/: Dockerfile.minimal  Dockerfile.research  build.sh  compose.minimal.yml  compose.research.yml
experiments/01_eval_planning/: run.py  run.sh  viewer.py
experiments/01_run_agents/: run.py  run.sh  run_advanced.sh  run_basic.sh
experiments/02_run_agents/: run.py  run_goal_mode.sh  (+1 more)
proposals/: all_souls_questions.csv  conceptual_model_business.md  conceptual_paperclip_minimizer.md  conceptual_rl_scaling.md  conceptual_self_harm_reliability.md  empirical_cot_controllability_steering_vectors.md  empirical_emergent_collusion.md  empirical_filler_token_scaling.md  empirical_functional_emotions_wellbeing.md  empirical_impossible_tasks_bullshitting.md  empirical_introspection_science.md  empirical_nla_auditbench_quirks.md  empirical_prompted_false_facts.md  empirical_reasoning_recontextualization.md  empirical_slop_probes.md  empirical_subliminal_backdoors.md
scripts/: abhay-pi  claude+  disable_mig.sh  enable_mig.sh  gdoc_webapp.gs  migrate_file_caches.py  reclaim_disk.sh  run_cleanup.sh  run_pi_sandbox.py  setup_abhay_pi.sh  setup_machine.sh  test_snapshot.py
src/: __init__.py  agent_runner.py  agent_viewer.py  audit_agent.py  blogpost.py  blogpost_studio.py  blogpost_studio_web.py  blue_team.py  blueteam_web.py  docent_utils.py  oversight.py  pi_inspect.py  proposal_studio.py  proposals_web.py  runner_utils.py  sandbox.py  studio_job.py  theme.py  tooling.py  utils.py  viz.py  web_common.py
(+96 files in other folders)
