[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.11"
dependencies = [
    "docent-python==0.1.27a0",
    "inspect-ai",
    "pydantic",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
