[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-name"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.11"
dependencies = [
    "docent-python==0.1.27a0",
    "pydantic",
]

[project.optional-dependencies]
dev = []
# The toolchain Python the agent sandboxes mount read-only (src/sandbox.py)
# carries this common scientific / ML / API stack so agents don't hit avoidable
# ModuleNotFoundError friction. Mirrors what the old CPU Docker image shipped.
# Installed by scripts/setup_machine.sh via `uv pip install -e ".[sandbox]"`.
sandbox = [
    "anthropic",
    "openai",
    "httpx",
    "requests",
    "python-dotenv",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "jinja2",
    "tqdm",
    # Provided-credential SDKs (keys live in .env): the corresponding client
    # should be importable so agents aren't blocked when they reach for them.
    "tinker",
    "modal",
    "datasets",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
